<resources>
    <string name="app_name">Easy And Tasty</string>
    <string name="recipe_name">Укажите название рецепта</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="enter_ingredients">Укажите ингредиент и количество</string>
    <string name="addIngredients">Добавить ингредиент</string>
    <string name="instraction">Инструкция</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="email_exist">Данный email существует</string>
    <string name="please_enter_email">Пожалуйста введите email</string>
    <string name="username">Имя пользователя</string>
    <string name="enter_fields">Заполните все поля</string>
    <string name="enter_email_and_password">Введите email и пароль</string>
    <string name="google_failed">Вход в систему с помощью google аккаунта не удался</string>
    <string name="send">Отправить</string>
    <string name="instraction_forgot_pass">Чтобы сбросить пароль, введите адрес электронной почты, нажмите кнопку и
        проверьте почту, следуя инструкциям
    </string>
    <string name="email_not_exist">Такой email не существует</string>
    <string name="login">Войти</string>


    <!-- РЕЦЕПТЫ -->

    <string name="instraction_hint">Укажите пошагово каждый этап готовки вашего блюда</string>
    <string name="coocking_time_text">Время приготовления</string>
    <string name="publish">Опубликовать</string>
    <string name="gallery">ГАЛЕРЕЯ</string>
    <string name="photo">ФОТО</string>
    <string name="picture_switcher">Пожалуйста загружайте только свои фотографии</string>

    <!-- массив категорий для блюд -->
    <string-array name="food_categories">
        <item>Первые блюда</item>
        <item>Вторые блюда</item>
        <item>Закуски</item>
        <item>Салаты</item>
        <item>Соусы</item>
        <item>Напитки</item>
        <item>Десерты</item>
        <item>Выпечка</item>
    </string-array>

    <!-- массив сложности для блюд -->
    <string-array name="cooking_difficulty">
        <item>Легко</item>
        <item>Средне</item>
        <item>Сложно</item>
    </string-array>


    <!-- бжу для  блюд -->
    <string name="calories_add">Калории</string>
    <string name="carbohydrates_add">Углеводы</string>
    <string name="fat_add">Жиры</string>
    <string name="protein_add">Белок</string>
    <string name="add_a_comment">Добавить комментарий</string>
    <string name="comments">Комментарии</string>
    <string name="add_comments">Пожалуйста укажите комментарий</string>

    <!--тайтал navigationBottom-->
    <string name="shoping_list">Продукты</string>
    <string name="home">Домой</string>
    <string name="search">Поиск</string>
    <string name="add_recipe">Рецепт</string>
    <string name="profile">Профиль</string>
    <string name="posts">Рецептов</string>
    <string name="followers">Подписчики</string>
    <string name="following">Подписки</string>
    <string name="edit_profile">Изменить профиль</string>
    <string name="follow_btn_text">Подписаться</string>
    <string name="unfollow_btn_text">Отменить</string>
    <string name="discover_people">Поиск людей</string>
    <string name="favorite">Любимые рецепты</string>


    <!-- для соглосования окончаний с разным количеством
    %d означает, что можно поставить числовое значение-->
    <plurals name="likes_count">
        <item quantity="one">%d Лайк</item>
        <item quantity="other">%d Лайков</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addPicture">Добавить картинку</string>
    <string name="take_picture">Выбрать фото</string>
    <string name="take_photo">Сделать снимок</string>
    <string name="my_recipe">Мои рецепты</string>
    <string name="favorite_text">Посмотреть любимые рецепты</string>
    <string name="my_recipe_text">Посмотреть свои рецепты</string>
    <string name="search_people">Найти друзей</string>
    <string name="search_people_text">Поиск вдохновления</string>
    <string name="setting">Настройки</string>
    <string name="setting_text">Открыть настройки приложения</string>
    <string name="edit_profile_text">Создай себя</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_website">Социальные сети</string>
    <string name="please_enter_name">Пожалуйста введите имя</string>
    <string name="profile_saved">Профиль успешно изменен</string>
    <string name="please_enter_password">Пожалуйста введите пароль</string>
    <string name="you_should_enter_your_password">Вы должны указать свой пароль для изменения email</string>
</resources>
