<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/person_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/full_name_input"
            style="@style/big_input"
            android:inputType="textPersonName"
            android:hint="@string/full_name"
            app:layout_constraintTop_toBottomOf="@id/person_image"/>
    <EditText
            android:id="@+id/username_input"
            style="@style/big_input"
            android:inputType="textPersonName"
            android:hint="@string/username"
            app:layout_constraintTop_toBottomOf="@id/full_name_input"/>

    <EditText
            android:id="@+id/email_input_reg"
            style="@style/big_input"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/username_input"/>

    <EditText
            android:id="@+id/password_input"
            style="@style/big_input"
            android:inputType="textPassword"
            android:hint="@string/hint_pass"
            app:layout_constraintTop_toBottomOf="@id/email_input_reg"/>

    <Button
            android:id="@+id/regbutton"
            style="@style/big_btn"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@+id/password_input"/>

</android.support.constraint.ConstraintLayout>