<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/person_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_image">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/username_input"
                    style="@style/big_input"
                    android:inputType="textPersonName"
                    android:hint="@string/username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:id="@+id/email_input_reg"
                    style="@style/big_input"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username_input"/>

            <EditText
                    android:id="@+id/password_input"
                    style="@style/big_input"
                    android:inputType="textPassword"
                    android:hint="@string/hint_pass"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_input_reg"/>

            <Button
                    android:id="@+id/regbutton"
                    style="@style/big_btn"
                    android:text="@string/register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_input"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/layout_progressbar"/>

</android.support.constraint.ConstraintLayout>