<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto">



    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="200dp">

        <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="top"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <ImageView
                    android:id="@+id/recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin">
                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <com.shank.eat.screens.common.CustomImageButton
                            android:id="@+id/back_img_recipe"
                            style="@style/icon"
                            android:src="@drawable/ic_back"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    <Button
                            android:id="@+id/publish_btn"
                            style="@style/small_toolbar_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/publish"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

            <EditText
                    android:id="@+id/name_recipe_input"
                    style="@style/recipe_input"
                    android:layout_marginTop="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    android:hint="@string/recipe_name"/>

            <Spinner
                    android:id="@+id/categories"
                    style="@style/recipe_spiner"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:entries="@array/food_categories"
                    app:layout_constraintTop_toBottomOf="@id/name_recipe_input"/>
            <Spinner
                    android:id="@+id/recipe_difficulty"
                    style="@style/recipe_spiner"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    android:entries="@array/cooking_difficulty"
                    app:layout_constraintTop_toBottomOf="@id/name_recipe_input"/>


            <TextView
                    android:id="@+id/ingredients_label"
                    style="@style/recipe_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:labelFor="@id/ingredients1_input"
                    android:text="@string/ingredients"
                    app:layout_constraintTop_toBottomOf="@id/categories"/>

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/recipe_form"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/ingredients_label">

                <EditText
                        android:id="@+id/ingredients1_input"
                        style="@style/recipe_input"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:hint="@string/enter_ingredients"
                        android:importantForAutofill="no"/>
                <EditText
                        android:id="@+id/ingredients2_input"
                        style="@style/recipe_input"
                        android:hint="@string/enter_ingredients"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ingredients1_input"
                        android:importantForAutofill="no"/>
                <EditText
                        android:id="@+id/ingredients3_input"
                        style="@style/recipe_input"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:hint="@string/enter_ingredients"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/ingredients2_input"
                        android:importantForAutofill="no"/>
                <LinearLayout
                        android:id="@+id/linear_ingredients"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/ingredients3_input"/>


            </android.support.constraint.ConstraintLayout>

            <TextView
                    android:id="@+id/add_ingredients_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addIngredients"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_form"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/blue"
                    android:textStyle="bold"/>


            <EditText style="@style/recipe_spiner"
                      android:id="@+id/coocking_time_text"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="20dp"
                      android:inputType="text"
                      android:hint="@string/coocking_time_text"
                      app:layout_constraintTop_toBottomOf="@id/add_ingredients_text"
                      android:importantForAutofill="no"/>
            <EditText style="@style/recipe_spiner"
                      android:id="@+id/protein"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="20dp"
                      android:inputType="number"
                      android:hint="@string/protein_add"
                      app:layout_constraintTop_toBottomOf="@id/coocking_time_text"
                      android:importantForAutofill="no"/>
            <EditText style="@style/recipe_spiner"
                      android:id="@+id/fat"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="20dp"
                      android:inputType="number"
                      android:hint="@string/fat_add"
                      app:layout_constraintTop_toBottomOf="@id/protein"
                      android:importantForAutofill="no"/>
            <EditText style="@style/recipe_spiner"
                      android:id="@+id/carbohydrates"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="20dp"
                      android:inputType="number"
                      android:hint="@string/carbohydrates_add"
                      app:layout_constraintTop_toBottomOf="@id/fat"
                      android:importantForAutofill="no"/>
            <EditText style="@style/recipe_spiner"
                      android:id="@+id/calories"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="20dp"
                      android:inputType="number"
                      android:hint="@string/calories_add"
                      app:layout_constraintTop_toBottomOf="@id/carbohydrates"
                      android:importantForAutofill="no"/>
            <TextView
                    android:id="@+id/instraction_label"
                    style="@style/recipe_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/instraction"
                    app:layout_constraintTop_toBottomOf="@id/calories"/>

            <EditText
                    android:id="@+id/instruction_input"
                    style="@style/FullWidthEditText"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:hint="@string/instraction_hint"
                    app:layout_constraintTop_toBottomOf="@id/instraction_label"
                    app:layout_constraintBottom_toTopOf="@+id/space"
                    android:importantForAutofill="no"/>

            <Space android:id="@+id/space"
                   android:layout_width="match_parent"
                   android:layout_height="10dp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_photo_camera"
            app:layout_anchor="@+id/appbar"
            app:layout_anchorGravity="right|bottom"/>
</android.support.design.widget.CoordinatorLayout>