<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/recipe_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/toolbar">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        style="@style/toolbar_title"
                        android:text="@string/new_recipe"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.Toolbar>



        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/recipe_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_food"
                app:civ_border_color="@color/grey"
                app:civ_border_width="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
                android:id="@+id/change_photo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_image"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue"
                android:textStyle="bold"/>

        <EditText
                android:id="@+id/name_recipe_input"
                style="@style/recipe_input"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:hint="@string/recipe_name"
                app:layout_constraintTop_toBottomOf="@id/change_photo_text"/>


        <TextView
                android:id="@+id/ingredients_label"
                style="@style/recipe_label"
                android:labelFor="@id/ingredients1_input"
                android:text="@string/ingredients"
                app:layout_constraintTop_toBottomOf="@id/name_recipe_input" />

        <android.support.constraint.ConstraintLayout
                android:id="@+id/recipe_form"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_label">

            <EditText
                    android:id="@+id/ingredients1_input"
                    style="@style/recipe_input"
                    android:hint="@string/enter_ingredients" />
            <LinearLayout
                    android:id="@+id/linear_ingredients"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/ingredients1_input"/>


        </android.support.constraint.ConstraintLayout>

        <TextView
                android:id="@+id/add_ingredients_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addIngredients"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipe_form"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/instraction_label"
                style="@style/recipe_label"
                android:text="@string/instraction"
                app:layout_constraintTop_toBottomOf="@id/add_ingredients_text" />

        <EditText
                android:id="@+id/instruction_input"
                style="@style/FullWidthEditText"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/instraction_label"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
