<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/white">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:contentInsetStart="0dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/back_img"
                    style="@style/icon"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    style="@style/toolbar_title"
                    android:text="@string/comments"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/back_img"
                    app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/comments_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/comments_item"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/post_comment_layout"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/post_comment_layout"
            android:layout_width="0dp"
            android:background="@drawable/top_border_grey"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal" >

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_photo"
                style="@style/icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/person"/>

        <EditText
                android:id="@+id/comment_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:hint="@string/add_a_comment"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_photo"
                app:layout_constraintEnd_toStartOf="@id/post_comment_text"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@android:color/transparent"
                android:textColor="@color/black"/>

        <TextView
                android:id="@+id/post_comment_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/send"
                android:textColor="@color/blue"
                android:gravity=""
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>